--- a/front-end/student helper project-react/src/components/admin-card.css
+++ b/front-end/student helper project-react/src/components/admin-card.css
@@ -1,7 +1,8 @@
-.liderboard-card-liderboard-card {
+.admin-card-admin-card {
   flex: 0 0 auto;
   width: 90%;
   display: flex;
+  position: relative;
   max-width: 800px;
   box-shadow: 5px 5px 10px 0px #d4d4d4;
   transition: 0.3s;
@@ -11,40 +12,56 @@
   justify-content: space-between;
   background-color: var(--dl-color-main-theme-background2);
 }
-.liderboard-card-liderboard-card:hover {
+.admin-card-admin-card:hover {
   transform: scale(1.05);
 }
-.liderboard-card-container {
+.admin-card-container {
   flex: 0 0 auto;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.liderboard-card-text {
+.admin-card-text {
   padding: var(--dl-space-space-halfunit);
 }
-.liderboard-card-text1 {
+.admin-card-text1 {
   color: var(--dl-color-main-theme-text);
   padding: var(--dl-space-space-halfunit);
 }
-.liderboard-card-container1 {
+.admin-card-container1 {
   flex: 0 0 auto;
+  width: var(--dl-size-size-large);
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.liderboard-card-text2 {
-  padding: var(--dl-space-space-halfunit);
-  padding-bottom: 8px;
-}
-.liderboard-card-text3 {
+.admin-card-navlink {
   color: var(--dl-color-main-theme-text);
-  padding: var(--dl-space-space-halfunit);
-  padding-right: 8px;
-  padding-bottom: 8px;
+  margin: var(--dl-space-space-halfunit);
+  align-self: center;
+  text-align: center;
+  transition: 0.3s;
+  border-width: 0px;
+  text-decoration: none;
+  background-color: var(--dl-color-main-theme-button);
+}
+.admin-card-navlink:hover {
+  transform: scale(1.05);
+}
+.admin-card-button {
+  color: var(--dl-color-main-theme-text);
+  margin: var(--dl-space-space-halfunit);
+  align-self: center;
+  text-align: center;
+  transition: 0.3s;
+  border-width: 0px;
+  background-color: var(--dl-color-danger-700);
+}
+.admin-card-button:hover {
+  transform: scale(1.05);
 }
 @media(max-width: 991px) {
-  .liderboard-card-liderboard-card {
+  .admin-card-admin-card {
     align-self: center;
     align-items: flex-start;
     flex-direction: column;
