--- a/front-end/student helper project-react/src/components/admin-header.css
+++ b/front-end/student helper project-react/src/components/admin-header.css
@@ -1,6 +1,7 @@
-.index-header-header {
+.admin-header-admin-header {
   width: 100%;
   display: flex;
+  position: relative;
   max-width: 1400px;
   align-self: center;
   align-items: center;
@@ -8,49 +9,67 @@
   padding-left: var(--dl-space-space-threeunits);
   margin-bottom: var(--dl-space-space-unit);
   padding-right: var(--dl-space-space-threeunits);
+  flex-direction: row;
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
   background-color: var(--dl-color-main-theme-background);
 }
-.index-header-container {
+.admin-header-container {
   flex: 0 0 auto;
   display: flex;
   align-items: center;
   flex-direction: row;
 }
-.index-header-navlink {
+.admin-header-navlink {
   display: contents;
 }
-.index-header-text {
+.admin-header-text {
   color: var(--dl-color-main-theme-text);
-  user-select: none;;
   text-decoration: none;
 }
-.index-header-btn-group {
+.admin-header-nav {
+  display: flex;
+  align-items: center;
+  padding-left: var(--dl-space-space-twounits);
+  flex-direction: row;
+}
+.admin-header-btn-group {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
 }
-.index-header-navlink1 {
+.admin-header-button {
   color: var(--dl-color-main-theme-button);
   transition: 0.3s;
   border-width: 0px;
-  text-decoration: none;
   background-color: var(--dl-color-main-theme-text);
 }
-.index-header-navlink1:hover {
+.admin-header-button:hover {
   transform: scale(1.05);
 }
 
+
+
+
+
+
+@media(max-width: 991px) {
+  .admin-header-admin-header {
+    flex-direction: column;
+  }
+  .admin-header-nav {
+    flex-direction: column;
+  }
+}
 @media(max-width: 767px) {
-  .index-header-header {
+  .admin-header-admin-header {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
 }
 @media(max-width: 479px) {
-  .index-header-header {
+  .admin-header-admin-header {
     padding: var(--dl-space-space-unit);
   }
 }
