--- a/front-end/student helper project-react/src/components/login-header.css
+++ b/front-end/student helper project-react/src/components/login-header.css
@@ -6,14 +6,17 @@
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
   padding-left: var(--dl-space-space-threeunits);
+  margin-bottom: var(--dl-space-space-unit);
   padding-right: var(--dl-space-space-threeunits);
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
+  background-color: var(--dl-color-main-theme-background);
 }
 .login-header-navlink {
   display: contents;
 }
 .login-header-text {
+  color: var(--dl-color-main-theme-text);
   text-decoration: none;
 }
 
