--- a/front-end/student helper project-react/src/components/user-header.css
+++ b/front-end/student helper project-react/src/components/user-header.css
@@ -6,9 +6,11 @@
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
   padding-left: var(--dl-space-space-threeunits);
+  margin-bottom: var(--dl-space-space-unit);
   padding-right: var(--dl-space-space-threeunits);
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
+  background-color: var(--dl-color-main-theme-background);
 }
 .user-header-container {
   flex: 0 0 auto;
@@ -20,6 +22,7 @@
   display: contents;
 }
 .user-header-text {
+  color: var(--dl-color-main-theme-text);
   text-decoration: none;
 }
 .user-header-nav {
@@ -35,71 +38,14 @@
   justify-content: space-between;
 }
 .user-header-button {
-  box-shadow: 5px 5px 10px 0px #d4d4d4;
+  color: var(--dl-color-main-theme-button);
   transition: 0.3s;
+  border-width: 0px;
+  background-color: var(--dl-color-main-theme-text);
 }
 .user-header-button:hover {
   transform: scale(1.05);
   box-shadow: 5px 5px 10px 0px #eaa9a9;
-}
-.user-header-burger-menu {
-  display: none;
-}
-.user-header-icon {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  display: none;
-}
-.user-header-mobile-menu {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  display: none;
-  padding: 32px;
-  z-index: 100;
-  position: absolute;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-}
-.user-header-nav1 {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.user-header-container1 {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-threeunits);
-  justify-content: space-between;
-}
-.user-header-image {
-  height: 2rem;
-}
-.user-header-close-mobile-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.user-header-icon02 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-}
-.user-header-icon04 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.user-header-icon06 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
-  margin-right: var(--dl-space-space-twounits);
-}
-.user-header-icon08 {
-  width: var(--dl-size-size-xsmall);
-  height: var(--dl-size-size-xsmall);
 }
 
 
@@ -107,32 +53,25 @@
 
 
 @media(max-width: 991px) {
-  .user-header-icon {
-    display: flex;
+  .user-header-header {
+    flex-direction: column;
   }
 }
 @media(max-width: 767px) {
   .user-header-header {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
+    flex-direction: column;
   }
   .user-header-nav {
-    display: none;
-  }
-  .user-header-btn-group {
-    display: none;
-  }
-  .user-header-burger-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
   }
 }
 @media(max-width: 479px) {
   .user-header-header {
     padding: var(--dl-space-space-unit);
   }
-  .user-header-mobile-menu {
-    padding: 16px;
+  .user-header-nav {
+    padding-left: 0px;
   }
 }
