--- a/front-end/student helper project-react/src/components/verification-card.css
+++ b/front-end/student helper project-react/src/components/verification-card.css
@@ -1,7 +1,8 @@
-.liderboard-card-liderboard-card {
+.verification-card-verification-card {
   flex: 0 0 auto;
   width: 90%;
   display: flex;
+  position: relative;
   max-width: 800px;
   box-shadow: 5px 5px 10px 0px #d4d4d4;
   transition: 0.3s;
@@ -11,40 +12,51 @@
   justify-content: space-between;
   background-color: var(--dl-color-main-theme-background2);
 }
-.liderboard-card-liderboard-card:hover {
+.verification-card-verification-card:hover {
   transform: scale(1.05);
 }
-.liderboard-card-container {
+.verification-card-container {
   flex: 0 0 auto;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.liderboard-card-text {
+.verification-card-text {
   padding: var(--dl-space-space-halfunit);
 }
-.liderboard-card-text1 {
+.verification-card-text1 {
   color: var(--dl-color-main-theme-text);
   padding: var(--dl-space-space-halfunit);
 }
-.liderboard-card-container1 {
+.verification-card-container1 {
   flex: 0 0 auto;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.liderboard-card-text2 {
+.verification-card-text2 {
+  color: var(--dl-color-main-theme-text);
   padding: var(--dl-space-space-halfunit);
   padding-bottom: 8px;
 }
-.liderboard-card-text3 {
-  color: var(--dl-color-main-theme-text);
-  padding: var(--dl-space-space-halfunit);
-  padding-right: 8px;
-  padding-bottom: 8px;
+.verification-card-navlink {
+  color: var(--dl-color-main-theme-button);
+  margin: var(--dl-space-space-halfunit);
+  align-self: center;
+  text-align: center;
+  transition: 0.3s;
+  border-width: 0px;
+  text-decoration: none;
+  background-color: var(--dl-color-main-theme-text);
+}
+.verification-card-navlink:hover {
+  transform: scale(1.05);
+}
+.verification-card-text3 {
+  text-align: center;
 }
 @media(max-width: 991px) {
-  .liderboard-card-liderboard-card {
+  .verification-card-verification-card {
     align-self: center;
     align-items: flex-start;
     flex-direction: column;
