--- a/front-end/student helper project-react/src/views/admin_verifications.css
+++ b/front-end/student helper project-react/src/views/admin_verifications.css
@@ -1,16 +1,17 @@
-.liderboard-container {
+.admin-verifications-container {
   width: 100%;
   display: flex;
   overflow: auto;
   min-height: 100vh;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.liderboard-liderboard {
+.admin-verifications-verifications-list {
   flex: 1;
   width: 100%;
   display: flex;
+  align-self: center;
   align-items: center;
   flex-direction: column;
   justify-content: flex-start;
