--- a/front-end/student helper project-react/src/views/ask.css
+++ b/front-end/student helper project-react/src/views/ask.css
@@ -8,8 +8,8 @@
   justify-content: flex-start;
 }
 .ask-form {
-  width: 60%;
-  min-width: 450px;
+  width: 80%;
+  max-width: 800px;
   align-self: center;
   margin-top: auto;
   margin-bottom: auto;
@@ -28,37 +28,15 @@
 .ask-textarea {
   width: 100%;
   height: 100px;
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
+  margin-bottom: var(--dl-space-space-unit);
 }
-.ask-files {
-  flex: 0 0 auto;
-  display: flex;
-  align-self: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
+.ask-textinput1 {
+  width: 100%;
+  box-shadow: 5px 5px 10px 0px #d4d4d4;
+  margin-bottom: var(--dl-space-space-unit);
 }
 .ask-container2 {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: center;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-}
-.ask-icon {
-  width: 24px;
-  height: 24px;
-}
-.ask-container3 {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: center;
-  padding-top: var(--dl-space-space-halfunit);
-  padding-bottom: var(--dl-space-space-halfunit);
-}
-.ask-icon2 {
-  width: 24px;
-  height: 24px;
-}
-.ask-container4 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -67,13 +45,34 @@
   align-items: center;
   justify-content: space-between;
 }
-.ask-button1 {
+.ask-button {
   transition: 0.3s;
 }
-.ask-button1:hover {
+.ask-button:hover {
   color: var(--dl-color-gray-white);
   transform: scale(1.05);
   box-shadow: 5px 5px 10px 0px #85d899;
   border-color: var(--dl-color-success-700);
   background-color: var(--dl-color-success-700);
+}
+@media(max-width: 991px) {
+  .ask-form {
+    max-width: 800px;
+    min-width: 0px;
+  }
+}
+@media(max-width: 767px) {
+  .ask-form {
+    max-width: 800px;
+    min-width: 0px;
+  }
+  .ask-textarea {
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .ask-container2 {
+    flex-direction: column;
+  }
+  .ask-select {
+    margin-bottom: var(--dl-space-space-unit);
+  }
 }
