--- a/front-end/student helper project-react/src/views/index.css
+++ b/front-end/student helper project-react/src/views/index.css
@@ -8,6 +8,7 @@
   border-width: 0px;
   flex-direction: column;
   justify-content: flex-start;
+  background-color: var(--dl-color-gray-white);
 }
 .index-hero {
   width: 100%;
@@ -26,10 +27,12 @@
   flex-direction: column;
 }
 .index-text {
+  color: var(--dl-color-gray-black);
   font-size: 3rem;
   max-width: 450px;
 }
 .index-text1 {
+  color: var(--dl-color-gray-black);
   margin-top: var(--dl-space-space-twounits);
   margin-bottom: var(--dl-space-space-twounits);
 }
@@ -39,9 +42,11 @@
   flex-direction: row;
 }
 .index-navlink {
+  color: var(--dl-color-gray-black);
   box-shadow: 5px 5px 10px 0px #d4d4d4;
   transition: 0.3s;
   padding-top: var(--dl-space-space-unit);
+  border-color: var(--dl-color-gray-black);
   padding-left: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-unit);
