--- a/front-end/student helper project-react/src/views/verification.css
+++ b/front-end/student helper project-react/src/views/verification.css
@@ -50,3 +50,11 @@
   box-shadow: 5px 5px 10px 0px #85D899;;
   background-color: var(--dl-color-success-500);
 }
+@media(max-width: 479px) {
+  .verification-form {
+    width: 80%;
+  }
+  .verification-container1 {
+    width: 100%;
+  }
+}
